- Re-enable testing of whether or not the callback is called in the multi-chunk seek, fix small GridStore bug (Issue #543, https://github.com/pgebheim)

0.9.9.6 2012-03-12
------------------
- BSON parser is externalized in it's own repository, currently using git master
- Fixes for Replicaset connectivity issue (Issue #537)
- Fixed issues with node 0.4.X vs 0.6.X (Issue #534)
- Removed SimpleEmitter and replaced with standard EventEmitter
- GridStore.seek fails to change chunks and call callback when in read mode (Issue #532)

0.9.9.5 2012-03-07
------------------
- Merged in replSetGetStatus helper to admin class (Issue #515, https://github.com/mojodna)
- Merged in serverStatus helper to admin class (Issue #516, https://github.com/mojodna)
- Fixed memory leak in C++ bson parser (Issue #526)
- Fix empty MongoError "message" property (Issue #530, https://github.com/aheckmann)
- Cannot save files with the same file name to GridFS (Issue #531)

0.9.9.4 2012-02-26
------------------
* bugfix for findAndModify: Error: corrupt bson message < 5 bytes long (Issue #519)

0.9.9.3 2012-02-23
------------------
* document: save callback arguments are both undefined, (Issue #518)
* Native BSON parser install error with npm, (Issue #517)

0.9.9.2 2012-02-17
------------------
* Improved detection of Buffers using Buffer.isBuffer instead of instanceof.
* Added wrap error around db.dropDatabase to catch all errors (Issue #512)
* Added aggregate helper to collection, only for MongoDB >= 2.1

0.9.9.1 2012-02-15
------------------
* Better handling of safe when using some commands such as createIndex, ensureIndex, addUser, removeUser, createCollection.
* Mapreduce now throws error if out parameter is not specified.

0.9.9 2012-02-13
----------------
* Added createFromTime method on ObjectID to allow for queries against _id more easily using the timestamp.
* Db.close(true) now makes connection unusable as it's been force closed by app.