@@ -1025,7 +1025,7 @@ Collection.prototype.reIndex = function(callback) {
  * @param {Function|String} map the mapping function.
  * @param {Function|String} reduce the reduce function.
  * @param {Objects} [options] options for the map reduce job.
- * @param {Function} callback returns the result of the map reduce job.
+ * @param {Function} callback returns the result of the map reduce job, (error, results, [stats])
  * @return {null}
  * @api public
  */
@@ -1059,28 +1059,17 @@ Collection.prototype.mapReduce = function mapReduce (map, reduce, options, callb
     mapCommandHash[name] = options[name];
   }
   
-  // console.log("+++++++++++++++++++++++++++++++++++++ mapCommandHash")
-  // console.dir(mapCommandHash)
-
   var self = this;
   var cmd = DbCommand.createDbSlaveOkCommand(this.db, mapCommandHash);
 
   this.db._executeQueryCommand(cmd, {read:true}, function (err, result) {
-    // console.log("++++++++++++++++++++++++++++++++++++++++++++++++++++++++ RESULTS")
-    // console.dir(err)
-    // console.dir(result)
-    
     if (err) {
       return callback(err);
     }
 
-    if (1 != result.documents[0].ok) {
-      return callback(result.documents[0]);
-    }
-
-    // If we wish for no verbosity
-    if(options['verbose'] == null || !options['verbose']) {
-      return callback(err, collection);
+    // 
+    if (1 != result.documents[0].ok || result.documents[0].err || result.documents[0].errmsg) {
+      return callback(self.db.wrap(result.documents[0]));
     }
 
     // Create statistics value
